<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <ImageView
            android:id="@+id/track_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
        android:contentDescription="@string/image_cont_desc"
        android:src="@drawable/track_image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/title_margin_bottom"
        android:background="@drawable/rect_bg"
        android:elevation="@dimen/title_bg_elev"
        android:padding="@dimen/title_padding"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:text="@string/title_text"
        android:textSize="@dimen/title_text_size"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>
     <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.android.quizapp.MainActivity">

            <TextView
                android:id="@+id/question_one_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quest_one_margin_top"
                android:padding="@dimen/question_text_view_padding"
                android:text='@string/question_one'
                android:textSize="@dimen/question_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/question_one_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edit_text_view_margin"
                android:layout_marginRight="@dimen/edit_text_view_margin"
                android:hint="@string/edittext_hint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginLeft="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginRight="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginTop="@dimen/div_view_margin_left_top"
                android:background="@color/div_bg" />

            <TextView
                android:id="@+id/question_two_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_view_padding"
                android:text="@string/question_two"
                android:textSize="@dimen/question_text"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/question_two_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radio_group_margin_left"
                android:layout_marginLeft="@dimen/radio_group_margin_left">

                <RadioButton
                    android:id="@+id/question_two_answer_marion_jones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marion_jones_text"

                    />

                <RadioButton
                    android:id="@+id/question_two_answer_allyson_felix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allyson_felix_text"

                    />

                <RadioButton
                    android:id="@+id/question_two_answer_florence_griffith_joyner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flo_griffith_joyner_text"

                    />

                <RadioButton
                    android:id="@+id/question_two_answer_jackie_joyner_kersee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jackie_joyner_kersee_text"

                    />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginLeft="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginRight="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginTop="@dimen/div_view_margin_left_top"
                android:background="#BF360C" />

            <TextView
                android:id="@+id/question_three_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_view_padding"
                android:text="@string/question_three"
                android:textSize="@dimen/question_text"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/question_three_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radio_group_margin_left"
                android:layout_marginLeft="@dimen/radio_group_margin_left"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_three_answer_sneakers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_sneakers"

                    />

                <RadioButton
                    android:id="@+id/question_three_answer_fleets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_fleets" />

                <RadioButton
                    android:id="@+id/question_three_answer_spikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three_spikes"

                    />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginLeft="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginRight="@dimen/div_view_margin_left_bottom_right"
                android:layout_marginTop="@dimen/div_view_margin_left_top"
                android:background="@color/div_bg" />

            <TextView
                android:id="@+id/question_four_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_view_padding"
                android:text="@string/question_four"
                android:textSize="@dimen/question_text"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/question_four_check_box_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginStart="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginTop="@dimen/chkbox_margin_top_padding_top"
                android:paddingLeft="@dimen/chkbox_margin_left_padding_left"
                android:paddingStart="@dimen/chkbox_margin_left_padding_left"
                android:paddingTop="@dimen/chkbox_margin_top_padding_top"
                android:text="@string/question_four_100" />

            <CheckBox
                android:id="@+id/question_four_check_box_150"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginStart="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginTop="@dimen/chkbox_margin_top_padding_top"
                android:paddingLeft="@dimen/chkbox_margin_left_padding_left"
                android:paddingTop="@dimen/chkbox_margin_top_padding_top"
                android:text="@string/question_four_150" />

            <CheckBox
                android:id="@+id/question_four_check_box_200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginStart="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginTop="@dimen/chkbox_margin_top_padding_top"
                android:paddingLeft="@dimen/chkbox_margin_left_padding_left"
                android:paddingTop="@dimen/chkbox_margin_top_padding_top"
                android:text="@string/question_four_200" />

            <CheckBox
                android:id="@+id/question_four_check_box_1600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginStart="@dimen/chkbox_margin_left_padding_left"
                android:layout_marginTop="@dimen/chkbox_margin_top_padding_top"
                android:paddingLeft="@dimen/chkbox_margin_left_padding_left"
                android:paddingTop="@dimen/chkbox_margin_top_padding_top"
                android:text="@string/question_four_1600" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/button_views_bottom_padding"
        android:paddingTop="@dimen/button_views_top_padding">
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:onClick="submitAnswers"
        android:text="@string/submit"
         />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#757575"
        android:layout_toRightOf="@+id/submit_button"
        android:layout_toEndOf="@+id/submit_button"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>